--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/third-parties": "^14.1.4",
-    "@xenova/transformers": "^2.16.1",
-    "next": "14.1.2",
+    "@next/third-parties": "^14.2.5",
+    "next": "^14.2.5",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7"
   }
 }
